# gripper-rollpawkit

./: CMakeLists.txt  README.md  package.xml
launch/: simulate.launch  simulate_launch.py
meshes/: driven_gear.stl  driven_linkage.stl  driving_gear.stl  joint_connector.stl  linkage.stl  part1.stl  part2.stl  part3.stl  part6.stl  part7.stl  servo_plate.stl
rviz/: visualize.rviz
urdf/: gripper-rollpawkit-macro.xacro  gripper-rollpawkit.urdf
